<resources>
    <string name="app_name">BOS</string>
    <string name="title_activity_application_container">ApplicationContainer</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_template">Template</string>
    <string name="title_produk">Produk</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_profile">Profile</string>

    <string name="SORT_NAME_ASC">A-Z</string>
    <string name="SORT_NAME_DESC">Z-A</string>
    <string name="SORT_DATE_ASC">Terbaru</string>
    <string name="SORT_DATE_DESC">Terlama</string>
    <string name="SORT_PRICE_ASC">Termurah</string>
    <string name="SORT_PRICE_DESC">Termahal</string>
    <string name="SORT_BESTSELLING_ASC">Terfavorit</string>

    <string name="INTERNET_NOT_FOUND">Gagal terhubung ke jaringan internet \nSilahkan coba lagi</string>

    <string name="INTERNET_NOT_FOUND_KEYBOARD">Gagal terhubung ke jaringan internet \nKlik disini untuk kembali</string>

    <string name="TEMPLATETEXT_NOT_FOUND">Template-textmu kosong, ayo bantu BOS untuk menambah template-text untuk tokomu!</string>

    <string name="PRODUCT_NOT_FOUND">Produkmu kosong, ayo bantu BOS untuk menambah produk di tokomu!</string>

    <string name="PRODUCT_BERANDA_NOT_FOUND">Maaf, analisa rekomendasi produk belum dapat dilakukan</string>
    <string name="PEMBELI_BERANDA_NOT_FOUND">>Maaf, analisa rekomendasi pembeli belum dapat dilakukan</string>

    <string name="TRANSACTION_ONLINE_NOT_FOUND">Belum ada transaksi online yang terjadi.\nTetap Semangat!</string>
    <string name="TRANSACTION_BARU_MASUK_NOT_FOUND">Tidak ada transaksi baru masuk</string>
    <string name="TRANSACTION_SUDAH_DIBAYAR_NOT_FOUND">Tidak ada transaksi yang sudah dibayar</string>
    <string name="TRANSACTION_SUDAH_DIKIRIM_NOT_FOUND">Tidak ada transaksi yang sudah dikirim</string>
    <string name="TRANSACTION_SUDAH_SELESAI_NOT_FOUND">Tidak ada transaksi yang sudah selesai</string>
    <string name="TRANSACTION_BATAL_NOT_FOUND">Tidak ada transaksi yang dibatalkan</string>

    <string name="TRANSACTION_OFFLINE_NOT_FOUND">Belum ada transaksi offline yang terjadi.\nTetap Semangat!</string>
</resources>
