<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_beranda"
        android:icon="@drawable/ic_apps_home_selector"
        android:title="@string/title_beranda"/>

    <item
        android:id="@+id/navigation_template"
        android:icon="@drawable/ic_apps_templatetext_selector"
        android:title="@string/title_template" />

    <item
        android:id="@+id/navigation_produk"
        android:icon="@drawable/ic_apps_produk_selector"
        android:title="@string/title_produk" />

    <item
        android:id="@+id/navigation_transaksi"
        android:icon="@drawable/ic_apps_transaksi_selector"
        android:title="@string/title_transaksi" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_apps_profile_selector"
        android:title="@string/title_profile" />

</menu>
