<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.example.bca_bos.ui.beranda.BerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_template"
        android:name="com.example.bca_bos.ui.template.TemplateFragment"
        android:label="@string/title_template"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_produk"
        android:name="com.example.bca_bos.ui.produk.ProdukFragment"
        android:label="@string/title_produk"
        tools:layout="@layout/layout_bottom_sheet_add_produk" />

    <fragment
        android:id="@+id/navigation_transaksi"
        android:name="com.example.bca_bos.ui.transaksi.TransaksiFragment"
        android:label="@string/title_transaksi"
        tools:layout="@layout/fragment_transaksi" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.bca_bos.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>